HTML: updated HMTL and CSS

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,6 +3,6 @@
 }
 
 body {
-    background-image: url("../images/blackboard\ with\ books.jpeg");
-    background-image: url("../images/plain\ blackboard.jpg");
+    background-image: url("../images/plain\ blackboard.jpg"); 
+    background-size: cover;
 }
