--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -83,10 +83,42 @@ h2, #question-section {
 .question-area {
     display: flex;
     justify-self: center;
+    align-items: center;
+    /* flex-direction: column; */
 }
 
 #question {
     font-size: 69%;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0;
+}
+
+li {
+    display: none;
+    border: 2px solid white;
+    background-color: rgba(35, 118, 207, 0.814);
+    border-radius: 25px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 25px;
+    padding-right: 1px; 
+    width: 100px;
+    font-size: 57%;
+    margin: 3px;
+
+}
+
+img {
+    display: none;
+    width: 250px;
+    height: auto;
 }
 
 .button {
@@ -97,6 +129,8 @@ h2, #question-section {
     padding-left: 15px;
     padding-right: 6px;
     width: 100px;
+    display: flex;
+    justify-content: center;
 }
 
 iframe {
@@ -110,7 +144,7 @@ iframe {
     font-size: 69%;
 }
 
-.button:click {
+.button:click >{
     display: none;
 }
 
