--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -109,15 +109,15 @@ li {
     padding-bottom: 3px;
     padding-left: 25px;
     padding-right: 1px; 
-    width: 100px;
+    width: 450px;
     font-size: 57%;
     margin: 3px;
 
 }
 
-img {
+#correctImg, #wrongImg {
     display: none;
-    width: 250px;
+    width: 200px;
     height: auto;
 }
 
