JavaScript-Questions: Worked on savings score and initials to localStorage. Added a hover background color to all list items and fixed quiz function to return correctCounter

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -143,8 +143,7 @@ iframe {
     align-items: center;
     font-size: 69%;
 }
-
-/* .button:click >{
-    display: none;
-} */
-
+ 
+.choice:hover {
+    background-color: rgb(189, 43, 226);
+}
