--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -139,10 +139,10 @@ iframe {
  
 .choice:hover {
     background-color: rgb(189, 43, 226);
-    box-shadow: 0px 0px 5px  rgb(243, 194, 255);
+    box-shadow: 0px 0px 5px  rgb(243, 194, 255);                /* See ReadMe */
 
 }
 
-.button:hover {
-    box-shadow: 0px 0px 5px #c1f4d2;
+.button:hover {                                                 /* See ReadMe */
+    box-shadow: 0px 0px 5px #c1f4d2;        
 }
